# aisr-data-warehouse

./: .gitignore  Dockerfile  Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  app.py  architecture.dot  config.json  dataflow.dot  dicomweb.py  generate_arch_diagraph.sh  metadata.json  pyproject.toml
